# plutus-compilation-bug

./: flake.nix  horizon-plutus-template.cabal
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0n80kdfv2pi8hkwgwagrx5nz1j1jnv8k-source  0w8mcgqpv9lnqafkf9nvilxwrwzjx3p8-source  3bngpzp82n7b76l5zil99ivjd2y0xx10-source  5w6fpxr52xi3a61zy334p6j2zh9ngjbp-source  5zp125dzb04ii23i62xkxvhxhdczy5i1-source  61gw1axgxrvx0bnxv2dla6zhkgwv45zr-source  6blxhkkqwjrr68v8vsfgy9dmgs1048xj-source  96y8li2047jfsg5b6zasdaz9gvdw5ywg-source  a56i1y5js340dn1w9r767a8jp34k31n4-source  b40p4jdif44ammainay1mckfy27yd6fv-source  bh9rkfyf6d3idhkyb1miwg7l6if1mkmq-source  bnzlrkafnqq8mki6gamasd6qhfqbisil-source  d9g4s88a5kmva7kxxqvsslvnliv6pvqm-source  fxph23vlgmgmfgjhwfwm3f9cxc7wmls5-source  ghxnazmksdqhwynzbkqikaa6bikla655-source  gv2r2401grvkkw0ag0rac5mg1advbi1z-source  h4a9fq53fyqpmnhl7hhzx6kqzb1r0n9v-source  miff9dq32ahncnbwll4q4rkwrfwss310-source
src/: Main.hs  Script.hs
