cabal-version: 1.12

name:           horizon-plutus-template
version:        0.1.0.0
synopsis:       UTxO-Seeded One-Shot-Currency Minting Policy For Plutus
description:    UTxO-Seeded One-Shot-Currency Minting Policy For Plutus
category:       Plutus
author:         <author name>
maintainer:     <maintainer email>
copyright:      <author name>
license:        MIT
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

flag defer-plugin-errors
  manual: True
  default: False

library
  exposed-modules:
      Script
  hs-source-dirs:
      src
  default-extensions:
      AllowAmbiguousTypes
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      DoAndIfThenElse
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      NoImplicitPrelude
      OverloadedStrings
      PatternGuards
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      TypeSynonymInstances
      ViewPatterns
      ImportQualifiedPost
      TemplateHaskell
  ghc-options: -Weverything -Wno-all-missed-specialisations -Wno-missing-local-signatures -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-specialise -fno-strictness
  build-depends:
      base >=4.7 && <5
    , plutus-ledger-api
    , plutus-tx
    , plutus-core
    , plutus-tx-plugin
  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors
  default-language: Haskell2010

executable serialize-script
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        AllowAmbiguousTypes BangPatterns BinaryLiterals ConstraintKinds
        DataKinds DefaultSignatures DeriveFoldable DeriveFunctor
        DeriveGeneric DeriveTraversable DerivingStrategies DoAndIfThenElse
        EmptyDataDecls ExistentialQuantification FlexibleContexts
        FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase
        MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
        PatternGuards PolyKinds RankNTypes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TupleSections
        TypeApplications TypeFamilies TypeOperators TypeSynonymInstances
        ViewPatterns ImportQualifiedPost NumericUnderscores DeriveAnyClass 
        NamedFieldPuns TemplateHaskell

    ghc-options:
        -Weverything -Wno-all-missed-specialisations
        -Wno-missing-local-signatures -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe
        -fobject-code -fno-ignore-interface-pragmas
        -fno-omit-interface-pragmas -fno-specialise -fno-strictness

    build-depends:
        base,
        base16-bytestring,
        bytestring,
        plutus-core,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        aeson,
        text,
        horizon-plutus-template

    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors
